fix: fix todo list endpoint and fix naming presenter dependency
