# internal/http/handler/todo_list_handler.go
@@ -7,7 +7,7 @@ import (
 	"github.com/rahmatrdn/go-skeleton/entity"
 	"github.com/rahmatrdn/go-skeleton/internal/http/middleware"
 	"github.com/rahmatrdn/go-skeleton/internal/parser"
-	"github.com/rahmatrdn/go-skeleton/internal/presenter"
+	"github.com/rahmatrdn/go-skeleton/internal/presenter/json"
 	"github.com/rahmatrdn/go-skeleton/internal/usecase"
 
 	fiber "github.com/gofiber/fiber/v2"
@@ -15,13 +15,13 @@ import (
 
 type TodoListHandler struct {
 	parser          parser.Parser
-	presenter       presenter.Presenter
+	presenter       json.JsonPresenter
 	todoListUsecase usecase.TodoListUsecase
 }
 
 func NewTodoListHandler(
 	parser parser.Parser,
-	presenter presenter.Presenter,
+	presenter json.JsonPresenter,
 	todoListUsecase usecase.TodoListUsecase,
 ) *TodoListHandler {
 	return &TodoListHandler{parser, presenter, todoListUsecase}
@@ -32,22 +32,21 @@ func (w *TodoListHandler) Register(app fiber.Router) {
 	app.Get("/todo-lists", middleware.VerifyJWTToken, w.GetByUserID)
 	app.Post("/todo-lists", middleware.VerifyJWTToken, w.Create)
 	app.Put("/todo-lists/:id", middleware.VerifyJWTToken, w.Update)
-	// app.Delete("/todo-lists/:id", middleware.VerifyJWTToken, w.Delete)
+	app.Delete("/todo-lists/:id", middleware.VerifyJWTToken, w.Delete)
 }
 
-// Get selected Wallet
-// @Summary			Get Wallet by ID
-// @Description		Get Wallet by ID
-// @Tags			Wallet
-// @Accept			json
-// @Produce			json
-// @Security 		Bearer
-// @Param           id path int true "id of wallet"
-// @Success			201 {object} entity.GeneralResponse{data=entity.WalletResponse} "Success"
+// @Summary         Get Todo List by ID
+// @Description     Get a Todo List by its ID
+// @Tags            Todo List
+// @Accept          json
+// @Produce         json
+// @Security        Bearer
+// @Param           id path int true "ID of the wallet"
+// @Success			201 {object} entity.GeneralResponse{data=entity.TodoListResponse} "Success"
 // @Failure			401 {object} entity.CustomErrorResponse "Unauthorized"
 // @Failure			422 {object} entity.CustomErrorResponse "Invalid Request Body"
 // @Failure			500 {object} entity.CustomErrorResponse "Internal server Error"
-// @Router			/v1/api/wallet/{id} [get]
+// @Router			/v1/api/todo-lists/{id} [get]
 func (w *TodoListHandler) GetByID(c *fiber.Ctx) error {
 	walletID, err := w.parser.ParserIntIDFromPathParams(c)
 	if err != nil {
@@ -62,18 +61,17 @@ func (w *TodoListHandler) GetByID(c *fiber.Ctx) error {
 	return w.presenter.BuildSuccess(c, data, "Success", http.StatusOK)
 }
 
-// Get Wallets by User ID
-// @Summary			Get Wallets by User ID
-// @Description		Get Wallets by User ID
-// @Tags			Wallet
+// @Summary         Retrieve Todo Lists by User ID
+// @Description     Retrieve a list of Todo Lists belonging to a user by their User ID
+// @Tags            Todo List
 // @Accept			json
 // @Produce			json
 // @Security 		Bearer
-// @Success			201 {object} entity.GeneralResponse{data=[]entity.WalletResponse} "Success"
+// @Success			201 {object} entity.GeneralResponse{data=[]entity.TodoListResponse} "Success"
 // @Failure			401 {object} entity.CustomErrorResponse "Unauthorized"
 // @Failure			422 {object} entity.CustomErrorResponse "Invalid Request Body"
 // @Failure			500 {object} entity.CustomErrorResponse "Internal server Error"
-// @Router			/v1/api/wallet [get]
+// @Router			/v1/api/todo-list [get]
 func (w *TodoListHandler) GetByUserID(c *fiber.Ctx) error {
 	userID, err := w.parser.ParserUserID(c)
 	if err != nil {
@@ -91,10 +89,9 @@ func (w *TodoListHandler) GetByUserID(c *fiber.Ctx) error {
 	return w.presenter.BuildSuccess(c, data, "Success", http.StatusOK)
 }
 
-// Create New Wallet
-// @Summary			Create New Wallet
-// @Description		Create New Wallet
-// @Tags			Wallet
+// @Summary			Create a new Todo List
+// @Description		Create a new Todo List
+// @Tags			Todo List
 // @Accept			json
 // @Produce			json
 // @Security 		Bearer
@@ -103,7 +100,7 @@ func (w *TodoListHandler) GetByUserID(c *fiber.Ctx) error {
 // @Failure			401 {object} entity.CustomErrorResponse "Unauthorized"
 // @Failure			422 {object} entity.CustomErrorResponse "Invalid Request Body"
 // @Failure			500 {object} entity.CustomErrorResponse "Internal server Error"
-// // @Router			/v1/api/wallet [post]
+// @Router			/v1/api/todo-list [post]
 func (w *TodoListHandler) Create(c *fiber.Ctx) error {
 	var req entity.TodoListReq
 
@@ -120,20 +117,19 @@ func (w *TodoListHandler) Create(c *fiber.Ctx) error {
 	return w.presenter.BuildSuccess(c, data, "Success", http.StatusOK)
 }
 
-// Update existing Wallet
-// @Summary			Update existing Wallet by ID
-// @Description		Update existing Wallet
-// @Tags			Wallet
-// @Accept			json
-// @Produce			json
-// @Security 		Bearer
-// @Param           id path int true "id of wallet"
+// @Summary         Update an existing Todo List by ID
+// @Description     Update an existing Todo List
+// @Tags            Todo List
+// @Accept          json
+// @Produce         json
+// @Security        Bearer
+// @Param           id path int true "ID of the todo list"
 // @Param			req body entity.WalletReq true "Payload Request Body"
 // @Success			201 {object} entity.GeneralResponse "Success"
 // @Failure			401 {object} entity.CustomErrorResponse "Unauthorized"
 // @Failure			422 {object} entity.CustomErrorResponse "Invalid Request Body"
 // @Failure			500 {object} entity.CustomErrorResponse "Internal server Error"
-// @Router			/v1/api/wallet [put]
+// @Router			/v1/api/todo-list [put]
 func (w *TodoListHandler) Update(c *fiber.Ctx) error {
 	var walletReq entity.TodoListReq
 	err := w.parser.ParserBodyWithIntIDPathParamsAndUserID(c, &walletReq)
@@ -146,32 +142,31 @@ func (w *TodoListHandler) Update(c *fiber.Ctx) error {
 		return w.presenter.BuildError(c, err)
 	}
 
-	return w.presenter.BuildSuccess(c, "", "Success", http.StatusOK)
+	return w.presenter.BuildSuccess(c, nil, "Success", http.StatusOK)
 }
 
-// // Delete existing Wallet
-// // @Summary			Delete existing Wallet by ID
-// // @Description		Delete existing Wallet
-// // @Tags			Wallet
-// // @Accept			json
-// // @Produce			json
-// // @Security 		Bearer
-// // @Param           id path int true "id of wallet"
-// // @Success			201 {object} entity.GeneralResponse "Success"
-// // @Failure			401 {object} entity.CustomErrorResponse "Unauthorized"
-// // @Failure			422 {object} entity.CustomErrorResponse "Invalid Request Body"
-// // @Failure			500 {object} entity.CustomErrorResponse "Internal server Error"
-// // @Router			/v1/api/wallet/{id} [delete]
-// func (w *TodoListHandler) Delete(c *fiber.Ctx) error {
-// 	walletID, err := w.parser.ParserIntIDFromPathParams(c)
-// 	if err != nil {
-// 		return w.presenter.BuildError(c, err)
-// 	}
+// @Summary         Delete Todo List by ID
+// @Description     Delete an existing Todo List by its ID
+// @Tags			Todo List
+// @Accept			json
+// @Produce			json
+// @Security 		Bearer
+// @Param           id path int true "ID of the todo list"
+// @Success			201 {object} entity.GeneralResponse "Success"
+// @Failure			401 {object} entity.CustomErrorResponse "Unauthorized"
+// @Failure			422 {object} entity.CustomErrorResponse "Invalid Request Body"
+// @Failure			500 {object} entity.CustomErrorResponse "Internal server Error"
+// @Router			/v1/api/todo-lists/{id} [delete]
+func (w *TodoListHandler) Delete(c *fiber.Ctx) error {
+	walletID, err := w.parser.ParserIntIDFromPathParams(c)
+	if err != nil {
+		return w.presenter.BuildError(c, err)
+	}
 
-// 	err = w.todoListUsecase.DeleteByID(c.Context(), walletID)
-// 	if err != nil {
-// 		return w.presenter.BuildError(c, err)
-// 	}
+	err = w.todoListUsecase.DeleteByID(c.Context(), walletID)
+	if err != nil {
+		return w.presenter.BuildError(c, err)
+	}
 
-// 	return w.presenter.BuildSuccess(c, nil, "Success", http.StatusOK)
-// }
+	return w.presenter.BuildSuccess(c, nil, "Success", http.StatusOK)
+}
